# deep_factors

./: README.md  consolidating_factor_results.ipynb  consolidating_index_results.ipynb  eigen_portfolio_observations.txt  experiment_deeportfolio_with_ibovespa.ipynb  experiments_PCA_and_autoencoder-Copy1.ipynb  experiments_PCA_and_autoencoder.ipynb  model_test.pickle  other_architecture_test.ipynb  pyproject.toml  tensor_flow_for_apple_silicon_test.ipynb  untitled.txt
data/: B3SA3.SA.csv  BBDC4.SA.csv  ITSA4.SA.csv  all_stock_prices.csv  eigen_portfolios_test.pickle_normalized_weights  eigen_portfolios_test_pickle_normalized_weights.pickle  experiments_autoencoders_rsults.pickle  experiments_sharpe_cache.pickle  ibovespa_q1_2023_prices.csv  tickers_carteira_ibov_q1_2023.csv
data/ibov_comp_10_anos/: abr_2013_ibov.csv  abr_2014_ibov.csv  abr_2015_ibov.csv  abr_2016_ibov.csv  abr_2017_ibov.csv  abr_2018_ibov.csv  abr_2019_ibov.csv  abr_2020_ibov.csv  abr_2021_ibov.csv  abr_2023_ibov.csv  jan_2013_ibov.csv  jan_2014_ibov.csv  jan_2015_ibov.csv  jan_2016_ibov.csv  jan_2017_ibov.csv  jan_2018_ibov.csv  jan_2019_ibov.csv  jan_2020_ibov.csv  jan_2021_ibov.csv  jan_2022_ibov.csv  jan_2023_ibov.csv  jul_2013_ibov.csv  jul_2014_ibov.csv  jul_2015_ibov.csv  jul_2016_ibov.csv  jul_2017_ibov.csv  (+15 more)
src/: Index_reading.ipynb
support_experiments/: data_processing.ipynb  deep_portfolio_implementation.ipynb  eigen_portafolios.ipynb  emulating_data_from_ref_experiments_PCA_and_autoencoder.ipynb  experiments_PCA_and_autoencoder_INDEX_COMPARISON.ipynb  experiments_v2_sharpe_value.ipynb
(+136 files in other folders)
